--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin-bottom: 40px;
 }
 .card {
   position: relative;
